src/components/NavBar.css
.active
{
    background-color: var(--Dark10);
}

.navbar-container
{
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    flex-wrap: nowrap;
    position: sticky;
    top: 0;
    justify-content:flex-start;
    background-color: var(--Dark2);
    gap: 10px;
    width: 288px;
    height: 100vh;
    align-items: center;
    padding: 48px;
    border-right: 2px var(--Light60) solid;
}

.navbar-TopCluster
{
    display: flex;
    flex-direction: column;
    width: 192px;
    gap: 48px;
    align-items: center;
    align-content: center;
    /* overflow: hidden; */
}

.navbar-TopCluster img
{
    width: 192px;
    height: auto;
    border-radius: 15px;
    object-fit: contain; 
}

.navbar-links-container
{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
    /* background-color: red; */
    gap: 6px;
}

.navbar-links-grouping
{
    display: flex;
    text-decoration: none;
}

.navbar-links
{
  display: flex;
  box-sizing: border-box;
  background-color: var(--Dark2);
  width: 100%;
  
  padding: 6px;
  border-radius: 5px;
  justify-content: start;
  align-items: center; 
  text-decoration: none;
}

.navbar-links:hover
{
    background-color: var(--Dark10);
    text-decoration: none;
}

.navbar-links:active
{
    text-decoration: none;
}

.navbar-label
{
  margin: 0;
  margin-left: 1rem;
  padding: 0.5rem 0rem 0.5rem 0;
  text-decoration: none;
}

.navbar-icons
{
    width: clamp(32px, 1vw, 64px);
}

.top-navbar-container
{
    display: flex;
    flex-direction: column;
    /* justify-content: space-between; */
    align-items: center;
    background-color: var(--Dark2);
    border-bottom: 2px var(--Light60) solid;
    padding: 24px;
    z-index: 9999;
    width: 100%;
}

.top-navbar-container-group
{
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.NavBar-MobileMenu
{
    display: none;
}

.NavBar-MobileMenu.is-open
{
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 6px;
}

.top-navbar-container a
{
    display: flex;
    line-height: 0;
    text-decoration: none;
    align-items: center;

}
.top-navbar-container img
{
    width: 48px;
    height: auto;
    border-radius: 15px;
    object-fit: contain; 
    margin: auto;
}

.top-navbar-links-container
{
    display:flex;
    height: fit-content;
    align-items: center;
}

.top-navbar-links-container a 
{
    display: flex;
    /* height: fit-content; */
    align-items: center;
    justify-content: center;
}

.top-navbar-links-container Link
{
    align-items: center;
}

@media (min-width: 810px)
{
    .navbar-container
    {
        display: flex;
    }

    .top-navbar-container
    {
        display: none;
        top: 0;
    }
}

@media (max-width: 809px)
{
    .navbar-container
    {
        display: none;
    }

    .top-navbar-container
    {
        position: sticky;
        top: 0;
    }
}

